<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500">

    <TextView
        android:id="@+id/newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newpassword"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:hint="@string/enter_your_username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUsername"
        android:textColorHint="@color/white"
        app:counterTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:passwordToggleDrawable="@drawable/outline_visibility_24"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:placeholderTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:drawableEnd="@drawable/outline_visibility_24"
            android:hint="@string/enter_new_password"
            android:padding="20dp"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNewPassword"
        android:textColorHint="@color/white"
        app:counterTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:passwordToggleDrawable="@drawable/outline_visibility_24"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:placeholderTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:drawableEnd="@drawable/outline_visibility_24"
            android:hint="@string/confirm_new_password"
            android:padding="20dp"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resetbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtConfirmPassword"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/submit" />

</RelativeLayout>